--- a/.github/workflows/price-monitor.yml
+++ b/.github/workflows/price-monitor.yml
@@ -1,9 +1,9 @@
-name: CS2 Skin Price Monitor
+name: Buff熊刀价格监控
 
 on:
   schedule:
-    # 每4小时运行一次（UTC时间）
-    - cron: '0 */4 * * *'
+    # 每天北京时间 10:00, 16:00, 22:00 各运行一次（UTC时间 2:00, 8:00, 14:00）
+    - cron: '0 2,8,14 * * *'
   workflow_dispatch: # 允许手动触发
   push:
     branches: [ main ]
@@ -13,20 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
+    - name: 检出代码
       uses: actions/checkout@v3
       
-    - name: Set up Python
+    - name: 设置Python环境
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.10'
         
-    - name: Install dependencies
+    - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Run price monitor
+    - name: 运行价格监控
       env:
         SKIN_NAME: ${{ vars.SKIN_NAME }}
         TARGET_PRICE: ${{ vars.TARGET_PRICE }}
@@ -37,9 +37,9 @@ jobs:
         NOTIFY_EMAIL: ${{ secrets.NOTIFY_EMAIL }}
       run: python monitor.py
       
-    - name: Commit and push if price history changed
+    - name: 提交价格历史记录
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add price_history.json
-        git diff --staged --quiet || (git commit -m "Update price history [skip ci]" && git push)
+        git diff --staged --quiet || (git commit -m "自动更新熊刀价格历史 [skip ci]" && git push)
