--- a/.github/workflows/price-monitor.yml
+++ b/.github/workflows/price-monitor.yml
@@ -19,7 +19,7 @@ jobs:
     - name: 设置Python环境
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.10'  # 使用Python 3.10
         
     - name: 安装依赖
       run: |
