--- a/.github/workflows/price-monitor.yml
+++ b/.github/workflows/price-monitor.yml
@@ -2,9 +2,8 @@ name: Buff熊刀价格监控
 
 on:
   schedule:
-    # 每天北京时间 10:00, 16:00, 22:00 各运行一次（UTC时间 2:00, 8:00, 14:00）
     - cron: '0 2,8,14 * * *'
-  workflow_dispatch: # 允许手动触发
+  workflow_dispatch:
   push:
     branches: [ main ]
 
@@ -19,12 +18,12 @@ jobs:
     - name: 设置Python环境
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # 使用Python 3.10
+        python-version: '3.10'
         
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install --timeout 120 -r requirements.txt
         
     - name: 运行价格监控
       env:
@@ -41,5 +40,10 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add price_history.json
-        git diff --staged --quiet || (git commit -m "自动更新熊刀价格历史 [skip ci]" && git push)
+        # 检查文件是否存在，只有存在时才提交
+        if [ -f price_history.json ]; then
+          git add price_history.json
+          git diff --staged --quiet || (git commit -m "自动更新熊刀价格历史 [skip ci]" && git push)
+        else
+          echo "price_history.json 文件不存在，跳过提交"
+        fi
