--- a/.github/workflows/price-monitor.yml
+++ b/.github/workflows/price-monitor.yml
@@ -12,9 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: 检出代码
+    - name: 检出代码（带写入权限）
       uses: actions/checkout@v3
-      
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: 设置Python环境
       uses: actions/setup-python@v4
       with:
